Added header_pages: networking.html and changed erc.html
Added header_pages: 

networking.html 

and changed:

erc.html

to:

ecbp.html

--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,9 @@ include: [".well-known"]
 header_pages:
  - all.html
  - core.html
+ - networking.html
  - interface.html
- - erc.html
+ - ecbp.html
  - meta.html
  - informational.html
 
