--- a/.github/workflows/ecip_validation.yml
+++ b/.github/workflows/ecip_validation.yml
@@ -7,5 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Set up Ruby 2.6
+      uses: actions/setup-ruby@v1
+      with:
+        version: 2.6.x
     - name: Validate the ECIP spec files
-      run: bundle install && bundle exec ecip_validator _specs/*
+      run: |
+        gem install bundler
+        bundle install --jobs 4 --retry 3
+        bundle exec ecip_validator _specs/*
