--- a/.github/workflows/ecip_validation.yml
+++ b/.github/workflows/ecip_validation.yml
@@ -15,4 +15,4 @@ jobs:
       run: |
         gem install bundler
         bundle install --jobs 4 --retry 3
-        bundle exec ecip_validator _specs/*
+        shopt -s globstar; bundle exec ecip_validator _specs/**/*.md
