ecip_validation.yml: peg bundler version
Signed-off-by: meows <b5c6@protonmail.com>

--- a/.github/workflows/ecip_validation.yml
+++ b/.github/workflows/ecip_validation.yml
@@ -13,6 +13,6 @@ jobs:
         ruby-version: 2.6.10
     - name: Validate the ECIP spec files
       run: |
-        gem install bundler
+        gem install bundler -v 2.4.22
         bundle install --jobs 4 --retry 3
         shopt -s globstar; bundle exec ecip_validator _specs/**/*.md
