Replace external ecip_validator gem with local implementation
- Add lib/ecip_validator.rb with full validation logic
- Add Rakefile with validate task (bundle exec rake validate)
- Remove ecip_validator gem dependency, add front_matter_parser
- Update GitHub workflow to use local validator

Validation rules:
- Required fields: ecip, title, author, type, status, created
- Valid statuses: WIP, Draft, Last Call, Accepted, Final, Deferred,
  Rejected, Withdrawn, Replaced, Superseded, Active
- Valid types: Standards Track, Informational, Meta
- Valid categories (for Standards Track): Core, Networking, Interface, ECBP

--- a/.github/workflows/ecip_validation.yml
+++ b/.github/workflows/ecip_validation.yml
@@ -6,13 +6,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Ruby 2.6
+    - uses: actions/checkout@v4
+    - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.6.10
+        ruby-version: '3.2'
+        bundler-cache: true
     - name: Validate the ECIP spec files
-      run: |
-        gem install bundler -v 2.4.22
-        bundle install --jobs 4 --retry 3
-        shopt -s globstar; bundle exec ecip_validator _specs/**/*.md
+      run: bundle exec rake validate
